docker-scripts/jackett/jackett.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: jackett
  labels:
    app: jackett
  annotations:
    keel.sh/policy: force # update policy (available: patch, minor, major, all, force)
    keel.sh/trigger: poll # enable active repository checking (webhooks and GCR would still work)
    keel.sh/approvals: "0" # required approvals to update
    keel.sh/match-tag: "true"
    keel.sh/pollSchedule: "@daily"
spec:
  selector:
    matchLabels:
      app: jackett
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
      - name: jackett
        image: linuxserver/jackett
        ports:
        - containerPort: 9117
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        hostPath:
          path: /home/docker/jackett/config
      - name: downloads
        hostPath:
          path: /home/docker/jackett/downloads
