docker-scripts/jackett/jackett.service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: jackett
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    name: http
    port: 9117
    targetPort: 9117
