docker-scripts/jackett/jackett.ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: jackett
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - 6f3806410f7b.sn.mynetname.net
      secretName: jackett-secret
  rules:
    - host: jackett.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  name: http
    - host: 6f3806410f7b.sn.mynetname.net
      http:
        paths:
          - path: /jackett
            pathType: Prefix
            backend:
              service:
                name: jackett
                port:
                  name: http
